--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.12.9",
+    "lucide-react": "^0.298.0",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-tsparticles": "^2.9.3",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "tailwindcss": "^3.3.2"
   }
 }
